--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,6 @@ services:
       - .:/app
     ports:
       - "3000:3000"
+    # https://stackoverflow.com/questions/31669226/rails-byebug-did-not-stop-application
+    stdin_open: true
+    tty: true
